# skrynia

./: .gitignore  AGENTS.md  pyproject.toml  spec.org
openspec/changes/add-di-container-package/: proposal.md
openspec/changes/add-di-container-package/specs/di-starlette-integration/: spec.md
openspec/changes/add-di-container-package/specs/di-typed-api-contracts/: spec.md
openspec/changes/archive/2026-02-13-add-di-container-package/: design.md  tasks.md
openspec/changes/archive/2026-02-13-add-di-container-package/specs/di-container-core/: spec.md
openspec/changes/archive/2026-02-13-add-di-container-package/specs/di-fastapi-integration/: spec.md
openspec/specs/di-container-core/: spec.md
openspec/specs/di-fastapi-integration/: spec.md
openspec/specs/di-starlette-integration/: spec.md
openspec/specs/di-typed-api-contracts/: spec.md
src/skrynia/: __init__.py
