[project]
name = "skrynia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mike Oz", email = "kozloffsky@hotmal.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
sqla = [
  "skry-sqla"
]

[tool.uv.sources]
skry-sqla = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
