[project]
name = "skrynia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mike Oz", email = "kozloffsky@hotmal.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
sqla = [
  "skry-sqla"
]
di = [
  "skry-di"
]
stream = [
  "skry-stream"
]
bun = [
  "skry-bun"
]

[tool.uv.sources]
skry-sqla = { workspace = true }
skry-di = { workspace = true }
skry-stream = { workspace = true }
skry-bun = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.9",
    "starlette>=0.52.1",
]

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
addopts = "--cov=skry_sqla --cov=skry_di --cov=skry_stream --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.report]
skip_covered = true
show_missing = true

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
show_error_codes = true
files = ["packages/skry-sqla/src/skry_sqla", "packages/skry-di/src/skry_di", "packages/skry-stream/src/skry_stream", "packages/skry-bun/src/skry_bun"]
